# uvk5-rust

./: .gitignore  LICENSE  README.md
.github/workflows/: build-test.yaml  docs.yaml
bk4819/: Cargo.toml
bk4819/src/: doc_table.rs  lib.rs  registers.rs
dp32g030/: .gitignore  Cargo.toml  Makefile  Makefile.toml  svd2rust.toml
dp32g030-hal/: .gitignore  Cargo.toml  memory.x
dp32g030-hal-flash/: Cargo.toml  build.rs  link.x  memory.x
dp32g030-hal-flash/.cargo/: config.toml
dp32g030-hal-flash/src/: lib.rs  main.rs
dp32g030-hal/examples/: blink.rs  empty.rs
dp32g030-hal/src/: block.rs  lib.rs  prelude.rs  time.rs
dp32g030-hal/src/gpio/: alt.rs  erased.rs  hal02.rs  hal1.rs  inout.rs  mod.rs  mode.rs  partial.rs  pin.rs  shared.rs
dp32g030-hal/src/power/: chip_id.rs  clocks.rs  dev_gate.rs  gate.rs  mod.rs
dp32g030-hal/src/spi/: config.rs  hal02.rs  hal1.rs  instance.rs  mod.rs  port.rs
dp32g030-hal/src/timer/: config.rs  counter.rs  fugit.rs  hal02.rs  hal1.rs  mod.rs  peripherals.rs  timing.rs
dp32g030-hal/src/uart/: config.rs  data.rs  hal02.rs  hal1.rs  instance.rs  mod.rs  peripherals.rs  port.rs  rx.rs  tx.rs
dp32g030/.cargo/: config.toml
dp32g030/examples/: cargo_make_fix.rs
dp32g030/svd/: dp32g030.yaml  flash.yaml  gpioa.yaml  gpiob.yaml  gpioc.yaml  interrupts.yaml  main.yaml  pmu.yaml  portcon.yaml  spi.yaml  syscon.yaml  timerbase.yaml  uart.yaml
k5board/: Cargo.toml  build.rs  memory.x
k5board/examples/: blink.rs  client.rs  defmt.rs  eeprom.rs  keypad.rs  lcd.rs  uart.rs
k5board/src/: backlight.rs  defmt_logger.rs  eeprom.rs  flashlight.rs  keypad.rs  lcd.rs  lib.rs  prelude.rs  ptt.rs  shared_i2c.rs  uart.rs
k5firmware/: Cargo.toml  build.rs  memory.x
k5firmware/.cargo/: config.toml
k5firmware/src/: bk1080.rs  error.rs  main.rs
k5lib/: Cargo.toml
k5lib/src/: client.rs  lib.rs  pack.rs  version.rs
k5lib/src/protocol/: crc.rs  deobfuscated.rs  frames.rs  messages.rs  mod.rs  obfuscation.rs  parse.rs  serialize.rs
k5lib/src/protocol/messages/: bootloader.rs  custom.rs  mod.rs  radio.rs  util.rs
k5tool/: Cargo.toml  runner.bat
k5tool/src/: binformat.rs  common.rs  console.rs  debug.rs  flash.rs  flash_info.rs  flash_lint.rs  hexdump.rs  lib.rs  main.rs  pack.rs  packed.rs  parsedump.rs  read_eeprom.rs  simulate.rs  unpack.rs
k5tool/src/protocol/: crc.rs  deobfuscated.rs  frames.rs  messages.rs  mod.rs  serialize.rs
