[package]
name = "dp32g030-hal"
version = "0.1.0"
edition = "2021"

authors = ["Aaron Griffith <aargri@gmail.com>"]

[package.metadata.docs.rs]
default-target = "thumbv6m-none-eabi"
targets = []

[dependencies]
cortex-m = "0.7.6"
defmt = { version = "0.3.5", optional = true }
dp32g030 = { path = "../dp32g030", features = ["atomics"] }
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"]}
embedded-hal-1 = { package = "embedded-hal", version = "1" }
fugit = "0.3.7"
nb = "1.1"
paste = "1"

[features]
defmt = [
      "dep:defmt",
      "dp32g030/defmt",
      "embedded-hal-1/defmt-03",
      "fugit/defmt",
      "nb/defmt-0-3",
]
