[package]
name = "dp32g030-hal"
version = "0.1.0"
edition = "2021"

authors = ["Aaron Griffith <aargri@gmail.com>"]

[package.metadata.docs.rs]
features = ["defmt"]
default-target = "thumbv6m-none-eabi"
targets = []

[lib]
test = false
bench = false

[dependencies]
cortex-m = "0.7.6"
critical-section = "1"
defmt = { version = "0.3.5", optional = true }
dp32g030 = { path = "../dp32g030", features = ["atomics"] }
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"]}
embedded-hal-1 = { package = "embedded-hal", version = "1" }
embedded-hal-nb = "1"
fugit = "0.3.7"
fugit-timer = "0.1"
muldiv = "1"
nb = "1.1"
paste = "1"
void = { version = "1", default-features = false }

[dev-dependencies]
cortex-m-rt = "0.7"
panic-halt = "0.2"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
panic = "abort"

[features]
defmt = [
      "dep:defmt",
      "dp32g030/defmt",
      "embedded-hal-1/defmt-03",
      "fugit/defmt",
      "nb/defmt-0-3",
]
