[package]
name = "dp32g030"
version = "0.1.0"
edition = "2021"

authors = ["Aaron Griffith <aargri@gmail.com>"]

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.7.3", optional = true }
vcell = "0.1.2"
defmt = { version = "0.3.5", optional = true }
portable-atomic = { version = "1", default-features = false, optional = true }

[package.metadata.docs.rs]
features = ["atomics", "critical-section", "defmt", "rt"]
default-target = "thumbv6m-none-eabi"
targets = []

[features]
default = ["critical-section", "rt"]

atomics = ["dep:portable-atomic"]
rt = ["cortex-m-rt/device"]
