[package]
name = "k5board"
version = "0.1.0"
edition = "2021"

authors = ["Aaron Griffith <aargri@gmail.com>"]

[package.metadata.docs.rs]
features = ["defmt"]
default-target = "thumbv6m-none-eabi"
targets = []

[lib]
test = false
bench = false

[dependencies]
cortex-m = "0.7.6"
defmt = { version = "0.3.5", optional = true }
dp32g030-hal = { path = "../dp32g030-hal" }

[dev-dependencies]
cortex-m-rt = "0.7"
panic-halt = "0.2"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
panic = "abort"

[features]
defmt = [
      "dep:defmt",
      "dp32g030-hal/defmt",
]
