[package]
name = "k5board"
version = "0.1.0"
edition = "2021"

authors = ["Aaron Griffith <aargri@gmail.com>"]

[package.metadata.docs.rs]
features = ["defmt"]
default-target = "thumbv6m-none-eabi"
targets = []

[lib]
test = false
bench = false

[dependencies]
bitbang-hal = "0.3.3"
bitflags = "1"
cortex-m = "0.7.6"
critical-section = "1"
defmt = { version = "0.3.5", optional = true }
display-interface = "0.4"
display-interface-spi = "0.4"
eeprom24x = "0.7"
embedded-graphics-core = "0.4"
dp32g030-hal = { path = "../dp32g030-hal" }
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"]}
embedded-hal-1 = { package = "embedded-hal", version = "1" }
embedded-io = "0.6"
k5lib = { path = "../k5lib", default-features = false }
spin = { version = "0.9", features = ["portable_atomic"] }
st7565 = "0.5"
void = { version = "1", default-features = false }

[dev-dependencies]
cortex-m-rt = "0.7"
embedded-graphics = "0.8"
panic-halt = "0.2"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
panic = "abort"

[features]
defmt = [
      "dep:defmt",
      "dp32g030-hal/defmt",
      "embedded-hal-1/defmt-03",
      "embedded-io/defmt-03",
      "k5lib/defmt",
]
defmt-logger = ["defmt"]

[[example]]
name = "defmt"
required-features = ["defmt-logger"]
