[package]
name = "k5firmware"
version = "0.1.0"
edition = "2021"

authors = ["Aaron Griffith <aargri@gmail.com>"]

[package.metadata.docs.rs]
default-target = "thumbv6m-none-eabi"
targets = []

[[bin]]
name = "k5firmware"
test = false
bench = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1"
dp32g030-hal = { path = "../dp32g030-hal" }
panic-halt = "0.2"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
panic = "abort"
