[package]
name = "k5firmware"
version = "0.1.0"
edition = "2021"

authors = ["Aaron Griffith <aargri@gmail.com>"]

[package.metadata.docs.rs]
default-target = "thumbv6m-none-eabi"
targets = []

[[bin]]
name = "k5firmware"
test = false
bench = false

[dependencies]
alloc-cortex-m = "0.4"
bytemuck = "1.16"
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-graphics = "0.8"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7" }
k5board = { path = "../k5board" }
k5lib = { path = "../k5lib", default-features = false }
panic-halt = "0.2"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"
panic = "abort"
