[package]
name = "k5lib"
version = "0.1.0"
edition = "2021"

authors = ["Aaron Griffith <aargri@gmail.com>"]

[dependencies]
crc = "3"
defmt = { version = "0.3.5", optional = true }
nom = "7"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[features]
default = ["std"]

alloc = []
std = ["alloc"]

defmt = ["dep:defmt"]
