[package]
name = "k5tool"
version = "0.1.0"
edition = "2021"

authors = ["Aaron Griffith <aargri@gmail.com>"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "wrap_help"] }
crc = "3"
dialoguer = "0.11"
elf = "0.7"
indicatif = "0.17"
k5lib = { path = "../k5lib" }
nom = "7"

# https://github.com/serialport/serialport-rs/pull/79
serialport = { git = "https://github.com/agrif/serialport-rs.git", branch = "uvk5-dep" }
